{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 23,
  "lineage": "4964c36d-13f7-0bd7-40ee-b4935dd18a18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4ee6e06774ebbe0",
            "arn": "arn:aws:ec2:us-east-2:123399119069:elastic-ip/eipalloc-0d4ee6e06774ebbe0",
            "association_id": "eipassoc-05f8d64be3b7ce361",
            "domain": "vpc",
            "id": "eipalloc-0d4ee6e06774ebbe0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05ea1dda34d2c3ad5",
            "private_dns": "ip-10-0-0-185.us-east-2.compute.internal",
            "private_ip": "10.0.0.185",
            "public_dns": "ec2-3-131-101-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.101.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058a8a5ab36292159",
            "arn": "arn:aws:ec2:us-east-2:123399119069:instance/i-0a82c23a54ea7971f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a82c23a54ea7971f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea790cbb01458b65",
            "private_dns": "ip-10-0-0-183.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a60389bd16e6bad7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07060bda5808994d8",
            "tags": {
              "Environment": "dev",
              "Name": "dev-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e65b5f4dacf7485"
            ]
          },
          "dependencies": [
            "aws_security_group.app_ec2",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:internet-gateway/igw-0c9b977ffb05652cf",
            "id": "igw-0c9b977ffb05652cf",
            "owner_id": "123399119069",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app-natgateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4ee6e06774ebbe0",
            "association_id": "eipassoc-05f8d64be3b7ce361",
            "connectivity_type": "public",
            "id": "nat-0afd05ece3d9480c1",
            "network_interface_id": "eni-05ea1dda34d2c3ad5",
            "private_ip": "10.0.0.185",
            "public_ip": "3.131.101.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07060bda5808994d8"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:route-table/rtb-04bb3bac411081c80",
            "id": "rtb-04bb3bac411081c80",
            "owner_id": "123399119069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afd05ece3d9480c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.app-natgateway1",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-public-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:route-table/rtb-0ade67237bccd81fb",
            "id": "rtb-0ade67237bccd81fb",
            "owner_id": "123399119069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9b977ffb05652cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app-igw1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt1-association-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0054ebd8446397545",
            "route_table_id": "rtb-04bb3bac411081c80",
            "subnet_id": "subnet-0f044fc1896c30ebe"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.app-natgateway1",
            "aws_route_table.app-private-rt1",
            "aws_subnet.app-private-subnet-1",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt1-association-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeff7438d780f06e",
            "route_table_id": "rtb-04bb3bac411081c80",
            "subnet_id": "subnet-062bba86407c81397"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.app-natgateway1",
            "aws_route_table.app-private-rt1",
            "aws_subnet.app-private-subnet-2",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt1-association-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f5a9616ff37cce",
            "route_table_id": "rtb-04bb3bac411081c80",
            "subnet_id": "subnet-0b0d34caf9f298412"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.app-natgateway1",
            "aws_route_table.app-private-rt1",
            "aws_subnet.app-private-subnet-3",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt1-association-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39fcab7a63a1ad4",
            "route_table_id": "rtb-0ade67237bccd81fb",
            "subnet_id": "subnet-07060bda5808994d8"
          },
          "dependencies": [
            "aws_internet_gateway.app-igw1",
            "aws_route_table.app-public-rt1",
            "aws_subnet.app-public-subnet-1",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt1-association-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031dd7205b0fa1f1f",
            "route_table_id": "rtb-0ade67237bccd81fb",
            "subnet_id": "subnet-0ab49a0ba3d023fd0"
          },
          "dependencies": [
            "aws_internet_gateway.app-igw1",
            "aws_route_table.app-public-rt1",
            "aws_subnet.app-public-subnet-2",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt1-association-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018d527066540bb0d",
            "route_table_id": "rtb-0ade67237bccd81fb",
            "subnet_id": "subnet-0700efd8a3df77b8b"
          },
          "dependencies": [
            "aws_internet_gateway.app-igw1",
            "aws_route_table.app-public-rt1",
            "aws_subnet.app-public-subnet-3",
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:security-group/sg-04e65b5f4dacf7485",
            "description": "this is a sg for hw",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e65b5f4dacf7485",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "session3-homework-sg",
            "name_prefix": "",
            "owner_id": "123399119069",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-0f044fc1896c30ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f044fc1896c30ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-062bba86407c81397",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062bba86407c81397",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-0b0d34caf9f298412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0d34caf9f298412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-07060bda5808994d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07060bda5808994d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-0ab49a0ba3d023fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab49a0ba3d023fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:subnet/subnet-0700efd8a3df77b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0700efd8a3df77b8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123399119069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065bd4d4fd69eeedd"
          },
          "dependencies": [
            "aws_vpc.app-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123399119069:vpc/vpc-065bd4d4fd69eeedd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05548ee49cbe387bf",
            "default_route_table_id": "rtb-0c9f9981c65c7e38d",
            "default_security_group_id": "sg-0ccb592ca1f31c730",
            "dhcp_options_id": "dopt-0a741509355dae1e8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065bd4d4fd69eeedd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9f9981c65c7e38d",
            "owner_id": "123399119069",
            "tags": {
              "Name": "terraform-vpc1"
            },
            "tags_all": {
              "Name": "terraform-vpc1"
            }
          }
        }
      ]
    }
  ]
}